# httpie

./: Cargo.toml
src/: main.rs
src/http/: get.rs  mod.rs  post.rs
