[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
syntect = "5.2.0"
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.5"
colored = "2.1.0"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = {version = "0.12.5", features=["json"]}
